@startuml

title Diagramme de Classes Simplifié

class User {
  +id
  +email
  +role
}

class Property {
  +id
  +address
  +status
}

class Contract {
  +id
  +rentAmount
  +status
}

class Payment {
  +id
  +amount
  +status
}

User "1" -- "*" Property
User "1" -- "*" Contract
Contract "1" -- "*" Payment

@enduml
